<resources>
    <string name="app_name">dayournal</string>
    <string name="title_write">Write</string>
    <string name="title_entries">Entries</string>
    <string name="title_statistics">Stats</string>
    <string name="sentiment_happy">happy sentiment</string>
    <string name="sentiment_neutral">neutral sentiment</string>
    <string name="sentiment_sad">sad sentiment</string>
    <string name="how_are_you_feeling_today">How are you feeling today?</string>
    <string name="greeting_placeholder">Greeting Placeholder</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="good_night">Good Night</string>
    <string name="hello">Hello</string>
    <string name="date_string_placeholder">Date String Placeholder</string>
    <string name="add">add</string>
    <string name="edit">edit</string>
    <string name="save">save</string>
    <string name="sentiment">Sentiment</string>
    <string name="nutrition">Nutrition</string>
    <string name="movement">Movement</string>
    <string name="rating_placeholder_decimal">4.5</string>
    <string name="empty_view_text">There are no entries yet.</string>
    <string name="sample_text">Sample Text</string>
    <string name="very_low">very bad</string>
    <string name="low">low</string>
    <string name="neutral">neutral</string>
    <string name="high">high</string>
    <string name="very_high">very high</string>
    <string name="on_average_your_rating_is">On average, your %1$s rating is %2$s.</string>
</resources>