<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_write">

    <fragment
        android:id="@+id/navigation_write"
        android:name="com.thomasruegg.dayournal.ui.write.WriteFragment"
        android:label="@string/title_write"
        tools:layout="@layout/fragment_write" />

    <fragment
        android:id="@+id/navigation_entries"
        android:name="com.thomasruegg.dayournal.ui.entries.EntriesFragment"
        android:label="@string/title_entries"
        tools:layout="@layout/fragment_entries" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.thomasruegg.dayournal.ui.statistics.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />
</navigation>