<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ImageButton
        android:id="@+id/sentimentHappy"
        android:layout_width="@dimen/sentiment_button_size"
        android:layout_height="@dimen/sentiment_button_size"
        android:layout_marginEnd="64dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/sentiment_happy"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_sentiment_satisfied_alt_24"
        app:layout_constraintEnd_toStartOf="@+id/sentimentNeutral"
        app:layout_constraintTop_toTopOf="@+id/sentimentNeutral"
        app:tint="@color/purple_500" />

    <ImageButton
        android:id="@+id/sentimentNeutral"
        android:layout_width="@dimen/sentiment_button_size"
        android:layout_height="@dimen/sentiment_button_size"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/sentiment_neutral"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_sentiment_neutral_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/purple_500" />

    <ImageButton
        android:id="@+id/sentimentSad"
        android:layout_width="@dimen/sentiment_button_size"
        android:layout_height="@dimen/sentiment_button_size"
        android:layout_marginStart="64dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/sentiment_sad"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_sentiment_very_dissatisfied_24"
        app:layout_constraintStart_toEndOf="@+id/sentimentNeutral"
        app:layout_constraintTop_toTopOf="@+id/sentimentNeutral"
        app:tint="@color/purple_500" />

    <TextView
        android:id="@+id/greetingPlaceholder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/greeting_placeholder"
        android:textAlignment="textStart"
        style="@style/TextAppearance.Material3.HeadlineLarge"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/journalEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/how_are_you_feeling_today"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/sentimentNeutral"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTextView"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/date_string_placeholder"
        android:textAlignment="textStart"
        app:layout_constraintStart_toStartOf="@+id/greetingPlaceholder"
        app:layout_constraintTop_toBottomOf="@+id/greetingPlaceholder" />

</androidx.constraintlayout.widget.ConstraintLayout>